# Movies_Management_App

./: CMakeLists.txt  README.md  main.cpp
Domain/: Movie.h
Interfata/GUI/: GUI.cpp  GUI.h
Interfata/Model/: MyTableModel.h
Teste/: Teste.cpp
